--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "description": "Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "http-server": "^14.1.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlphaTG50/HelpIT.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AlphaTG50/HelpIT/issues"
+  },
+  "homepage": "https://github.com/AlphaTG50/HelpIT#readme"
 }
