--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "helpit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,17 +12,9 @@
   "type": "commonjs",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "firebase": "^11.5.0"
   },
   "devDependencies": {
     "http-server": "^14.1.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AlphaTG50/HelpIT.git"
-  },
-  "bugs": {
-    "url": "https://github.com/AlphaTG50/HelpIT/issues"
-  },
-  "homepage": "https://github.com/AlphaTG50/HelpIT#readme"
+  }
 }
