--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "firebase": "^11.5.0"
+    "firebase": "^11.5.0",
+    "firebase-admin": "^13.2.0"
   },
   "devDependencies": {
     "http-server": "^14.1.1"
